--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # General dependencies for data migration
-mysql-connector-python==8.0.33
+pymysql == 
 pandas==1.5.3
 SQLAlchemy==2.0.16
 python-dotenv==1.0.0  
